<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kwicento-Count</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonCreate">New Counter</string>
    <string name="title_activity_creating_new_button">Creating New Counter</string>
    <string name="enterNameText">Name of New Counter</string>
    <string name="enter_name">Enter here</string>
    <string name="saveNew">Create</string>
    <string name="welcome1">Count</string>
    <string name="welcome2">For all your counting needs!</string>
    <string name="listButtonText">See Existing</string>
    <string name="title_activity_counter_list_screen">List of Counters</string>
    <string name="title_activity_counter_screen">Counting Time</string>
    <string name="nameOfCounter">Temp Name</string>
    <string name="counterTotal">Count: 0</string>
    <string name="reset">Reset</string>
    <string name="delete">Delete</string>
    <string name="stats">Stats</string>
    <string name="newNameText">New Name of Counter</string>
    <string name="changeName">Change</string>
    <string name="editName">Edit</string>
    
    
    

</resources>
