<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CounterScreen" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/counting"
        android:layout_alignParentTop="true"
        android:onClick="increment"
        android:text="@string/nameOfCounter"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/counting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/counterTotal"
        android:textSize="20sp" />

     <Button
         android:id="@+id/stat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button2"
         android:layout_alignBottom="@+id/button2"
         android:layout_alignLeft="@+id/button1"
         android:onClick="creationComplete"
         android:text="@string/stats"
         android:textSize="18sp" />

     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/edit"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="14dp"
         android:onClick="deleteCounter"
         android:text="@string/delete"
         android:textSize="18sp" />

     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button3"
         android:layout_alignBottom="@+id/button3"
         android:layout_toLeftOf="@+id/button3"
         android:onClick="reset"
         android:text="@string/reset"
         android:textSize="18sp" />

     <Button
         android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="36dp"
         android:layout_toLeftOf="@+id/button2"
         android:onClick="editCounter"
         android:text="@string/editName"
         android:textSize="18sp" />

</RelativeLayout>