<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreatingNewCounter" >

    <EditText
        android:id="@+id/enter_new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/enter_name" 
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:fitsSystemWindows="True"
        android:text="@string/newNameText"
        android:textSize="25sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/enter_new_name"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/enter_new_name"
        android:layout_marginTop="54dp"
        android:onClick="editCounter"
        android:text="@string/changeName" 
        android:textSize="18sp"
         />

</RelativeLayout>